2009-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added 'errorCode' to the reponse of tellStatus xml-rpc method.
	This key is only available for stopped/completed downloads and its
	value is the error code defined in EXIT STATUS in man page.
	* src/XmlRpcMethodImpl.cc

2009-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that session download length is not updated when
	PeerStat is not fastest one.
	* src/SegmentMan.cc

2009-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc.
	* doc/aria2c.1.txt

2009-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc.
	* src/AbstractCommand.cc

2009-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Handle the case when DownloadContext has no FileEntry.
	* src/XmlRpcMethodImpl.cc

2009-07-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Handle the situation where struct option.name is char *.
	* configure.ac
	* src/OptionParser.cc

2009-07-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Code cleanup
	* src/AbstractCommand.cc
	* src/DownloadCommand.cc

2009-07-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use option of each download to create AuthConfig instead of global
	option.	
	* src/AuthConfigFactory.cc
	* src/AuthConfigFactory.h
	* src/FtpNegotiationCommand.cc
	* src/HttpRequest.cc
	* src/HttpRequest.h
	* src/HttpRequestCommand.cc
	* src/HttpSkipResponseCommand.cc
	* src/MultiUrlRequestInfo.cc
	* test/AuthConfigFactoryTest.cc
	* test/FtpConnectionTest.cc
	* test/HttpRequestTest.cc

2009-07-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't call prepareForRetry(1) if all segments are ignored in
	SegmentMan.
	* src/AbstractCommand.cc
	* src/BitfieldMan.cc
	* src/BitfieldMan.h
	* src/SegmentMan.cc
	* src/SegmentMan.h

2009-07-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed FileEntry::getAssociatedUris()
	* src/FileEntry.h
