@@ -2149,6 +2149,11 @@ connections
 .RS 4
 The number of peers/servers the client has connected to\&.
 .RE
+.PP
+errorCode
+.RS 4
+The last error code occurred in this download\&. The value is of type string\&. The error codes are defined in EXIT STATUS section\&. This value is only available for stopped/completed downloads\&.
+.RE
 .sp
 \fBaria2\&.getUris\fR \fIgid\fR
 .sp
