@@ -2579,6 +2579,16 @@ connections
   The number of peers/servers the client has connected to.
 </p>
 </dd>
+<dt class="hdlist1">
+errorCode
+</dt>
+<dd>
+<p>
+  The last error code occurred in this download. The value is of type
+  string. The error codes are defined in EXIT STATUS section. This
+  value is only available for stopped/completed downloads.
+</p>
+</dd>
 </dl></div>
 <div class="paragraph"><p><strong>aria2.getUris</strong> <em>gid</em></p></div>
 <div class="paragraph"><p>This method returns URIs used in the download denoted by <em>gid</em>.  <em>gid</em>
@@ -3216,7 +3226,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-07-15 20:58:54 JST
+Last updated 2009-07-15 21:38:56 JST
 </div>
 </div>
 </body>
